# retail-data-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: agent-builder.md  architect.md  qa-evaluator.md  reviewer.md  safety-engineer.md
assignment/: assignment.md
demos/: demo_safety.py
docs/: architecture.md  demo_transcript.md  schema.md
docs/decisions/: 001-langgraph-over-plain-langchain.md  002-trio-retrieval-numpy-embeddings.md  003-pii-defense-in-depth.md  004-interrupt-based-delete-confirmation.md  005-gemini-with-openrouter-fallback.md
evals/: golden_questions.yaml  run_evals.py
golden_bucket/: embeddings.meta.json  embeddings.npy
golden_bucket/trios/: 01_top_customers_by_spend.json  02_total_revenue.json  03_monthly_revenue.json  04_revenue_by_product.json  05_revenue_by_category.json  06_top_products_by_units.json  07_average_order_value.json  08_database_structure.json
prompts/: persona.md  report_generation.md  sql_generation.md  sql_repair.md
scripts/: generate_schema_doc.py
src/: main.py
src/agent/: graph.py  observability.py  state.py
src/reports_store/: store.py
src/safety/: intent_gate.py  pii.py
src/tools/: bigquery_client.py  llm.py  prefs_store.py  trio_retrieval.py
tests/: test_adversarial.py  test_bigquery_guard.py  test_delete_flow.py  test_intent_gate.py  test_observability.py  test_pii.py  test_pii_edge_cases.py  test_prefs.py  test_report_narrative.py  test_reports_store.py  test_self_heal.py  test_self_heal_loop.py  test_sql_normalization.py  test_trio_retrieval.py
